--- a/app/styles/mockup.scss
+++ b/app/styles/mockup.scss
@@ -1,5 +1,6 @@
 @import "../components/bootstrap-sass/lib/variables";
 @import "../components/bootstrap-sass/lib/mixins";
+@import "../components/bootstrap-sass/lib/hero-unit";
 
 
 .row-fluid {
@@ -110,11 +111,72 @@
       }
     }
   }
+
+  .cart.cart-big .cart-dish {
+    width: 50%;
+    float: left;
+
+    img {
+      width: 100px;
+      height: 100px;
+      float: left;
+      margin-right: 15px;
+    }
+
+    h3 {
+      position: inherit;
+      margin: 0 0 10px 0;
+    }
+  }
+
+  .about-images {
+    .about-images-inner {
+      float: none;
+      width: 100%;
+    }
+
+    div {
+      width: 50%;
+      float: left;
+      text-align: center;
+      padding: 0 5px 15px 0;
+    }
+  }
+}
+
+@media (max-width: 600px) {
+  .cart.cart-big .cart-dish {
+    width: 100%;
+    float: none;
+  }
 }
 
 @media (max-width: 480px) {
+  .hero-unit h1 {
+    font-size: 250%;
+  }
+
   .dish .thumbnail img {
     width: 100px;
+  }
+
+  .about-images {
+    $count: 4;
+    $margin: 30px;
+
+    overflow: scroll;
+
+    .about-images-inner {
+      width: 220px * $count + $margin * $count * 2;
+    }
+
+    div {
+      width: 220px;
+      float: left;
+      text-align: center;
+      padding: 0;
+      margin: 0 $margin;
+    }
   }
 }
 
