Scenarios for dishes, categories and first for Cart

--- a/public/index.jade
+++ b/public/index.jade
@@ -1,7 +1,7 @@
 doctype 5
 html(lang="ru")
     head
-        title Кафе-бар &laquo;Барбудос&raquo;
+        title Меню — Бар Барбудос
         meta(charset="utf-8")
         meta(name="description", content="Кафе-бар &laquo;Барбудос&raquo;. Латиноамериканская и европейская кухня. Лучшее место для проведения вечеринок, дружеских застолий, банкетов и корпоративов.")
         meta(name="viewport", content="width=device-width")
