--- a/public/index.jade
+++ b/public/index.jade
@@ -1,25 +1,28 @@
 doctype 5
 html(lang="ru")
     head
-        title Меню — Бар Барбудос
-        meta(charset="utf-8")
-        meta(name="description", content="Кафе-бар &laquo;Барбудос&raquo;. Латиноамериканская и европейская кухня. Лучшее место для проведения вечеринок, дружеских застолий, банкетов и корпоративов.")
-        meta(name="viewport", content="width=device-width")
-        meta(http-equiv="X-UA-Compatible", content="IE=edge, chrome=1")
-        link(rel="stylesheet", href="components/bootstrap/docs/assets/css/bootstrap.css")
-
+        title Кафе-бар &laquo;Барбудос&raquo;
+        meta(name="viewport", content="width=device-width, initial-scale=1")
+        link(rel="stylesheet", href="//fonts.googleapis.com/css?family=PT+Serif+Caption:400&subset=latin,cyrillic")
+        link(rel="stylesheet", href="//fonts.googleapis.com/css?family=PT+Sans:400,400italic,700&subset=latin,cyrillic")
+        link(rel="stylesheet", href="/components/normalize-css/normalize.css")
+        link(rel="stylesheet", href="/styles/index.css")
+        script(src="/components/modernizr/modernizr.js")
     body(data-ng-app="barbudosApp")
-        //if lt IE 9
-            script(src="components/es5-shim/es5-shim.min.js")
-            script(src="components/json3/lib/json3.min.js")
 
         .container(data-ng-view)
 
-        script(src="components/angular/angular.min.js")
-        script(src="components/angular-resource/angular-resource.min.js")
-        script(src="components/angular-cookies/angular-cookies.min.js")
+        script(src="/components/angular/angular.min.js")
+        script(src="/components/angular-resource/angular-resource.min.js")
+        script(src="/components/angular-cookies/angular-cookies.min.js")
+        script(src="/components/ftscroller/lib/ftscroller.js")
+        script(src="//api-maps.yandex.ru/2.0-stable/?load=package.standard&lang=ru-RU")
 
-        script(src="scripts/app.js")
-        script(src="scripts/services.js")
-        script(src="scripts/controllers/cart.js")
-        script(src="scripts/controllers/dishes.js")
+        script(src="/scripts/libraries.js")
+        script(src="/scripts/directives/dishes.js")
+
+        script(src="/scripts/app.js")
+        script(src="/scripts/services.js")
+        script(src="/scripts/controllers/cart.js")
+        script(src="/scripts/controllers/dishes.js")
+        script(src="/scripts/controllers/categories.js")
