--- a/public/views/dishes.jade
+++ b/public/views/dishes.jade
@@ -1,64 +1,33 @@
-table.table
-  thead
-    tr
-      th
-        h1 Меню
-      th
-        ul(class="nav nav-pills")
-          li(data-ng-repeat="category in categories", data-ng-click="setQuery(category._id)", class="{{ category._id == query && 'active' }}")
-            a {{ category.name }}
-      th
-        div(data-ng-include="'/views/mini-cart.html'")
+include header
 
-hr
+.cart-layout
+    p.rolled-cart(data-ng-show="cart.count() > 0")
+        | {{ cart.count() }} блюд на {{ cart.price() }} руб.
+        a.rolled-cart-button(href="#!/cart") Корзина
 
-ul.thumbnails
-  li.span6(data-ng-repeat="dish in dishes | filter:query")
-    .well(data-ng-init="count=cart.get(dish._id).count || 1")
-      h2 {{ dish.name }}
-      p {{ dish.description }}
-      p {{ dish.price * count }} руб.
+    p.rolled-cart(data-ng-show="cart.count() == 0")
+        | Что закажете?
 
-      img(src="{{ dish.preview }}")
+    hr.cart-layout-divider
 
-      br
-      br
+.dishes.dishes-category
+    .dishes-row(data-dishes)
+        .dishes-item(data-dishes-item, data-ng-repeat="dish in dishes | filter:category")
+            picture.dishes-item-picture
+                img.dishes-item-picture-image(src="{{ dish.preview }}")
 
-      input(type="text", data-ng-model="count", class="input-small", style="margin:0px;")
-      input(type="button", value="В корзину", class="btn", data-ng-click="cart.add(dish._id, count)")
-            
-      input(type="button", value="Удалить из заказа", class="btn", data-ng-show="cart.has(dish._id)", data-ng-click="cart.remove(dish._id);count=1")
+            h2.dishes-item-title {{ dish.name }}
+            p.dishes-item-description {{ dish.description }}
 
-.well
-  form.form-horizontal
-    legend Добавить блюдо
-    .control-group
-      label(class="control-label", for="dish-name") Название
-      .controls
-        input(type="text", id="dish-name", class="input-xxlarge", data-ng-model="dish.name", required)
+            hr.dishes-item-divider
+            p.dishes-item-price {{ dish.price }} руб.
+            p.dishes-item-size <strong>300г.</strong> в порции
 
-    .control-group
-      label(class="control-label", for="dish-price") Стоимость
-      .controls
-        input(type="number", id="dish-price", class="input-xxlarge", data-ng-model="dish.price", required)
-        
-    .control-group
-      label(class="control-label", for="dish-description") Описание
-      .controls
-        textarea(id="dish-description", class="input-xxlarge", data-ng-model="dish.description", required)
-
-    .control-group
-      .controls
-        button(type="submit", class="btn btn-primary", data-ng-click="submit(dish)") Добавить
-
-.well
-  form.form-horizontal
-    legend Добавить категорию
-    .control-group
-      label(class="control-label", for="category-name") Название
-      .controls
-        input(type="text", id="category-name", class="input-xxlarge", data-ng-model="category.name", required)
-
-    .control-group
-      .controls
-        button(type="submit", class="btn btn-primary", data-ng-click="submitCategory(category)") Добавить
+            form.dishes-item-form
+                hr.dishes-item-divider
+                .amount(data-amount)
+                    button.button.button-ok.amount-decrease(data-ng-click="decrease()") &#x25c0;
+                    input.amount-input(data-ng-model="amount")
+                    button.button.button-ok.amount-increase(data-ng-click="increase()") &#x25b6;
+                    | &nbsp;=&nbsp;{{ amountPrice }} руб.
+                    button.button.button-ok(type="submit", data-ng-click="add()") В корзину
