--- a/public/index.jade
+++ b/public/index.jade
@@ -32,3 +32,4 @@ html(lang="ru")
         script(src="/scripts/controllers/dishes.js")
         script(src="/scripts/controllers/categories.js")
         script(src="/scripts/controllers/orders.js")
+        script(src="/scripts/controllers/login.js")
