--- a/public/styles/orders.styl
+++ b/public/styles/orders.styl
@@ -4,7 +4,7 @@
     .orders-item
 
         .orders-item-info
-            padding 15px
             margin-bottom 2px
+            padding 15px
             background #f6f6f6
-            //box-shadow 0 3px 10px 0 rgba(0, 0, 0, .6)
+            box-shadow 0 3px 10px 0 rgba(0, 0, 0, .6)
