Change stack to supplier

--- a/public/styles/header-links.styl
+++ b/public/styles/header-links.styl
@@ -1,7 +1,10 @@
-.about-link
+.header-links
     position absolute
     responsive top 115px same 5px
     responsive right 20px same 10px
     responsive serif 16px same 14px
-    text-shadow 0 1px 0 rgba(0, 0, 0, .5)
-    color white
+
+    a
+        padding-left: 10px
+        text-shadow 0 1px 0 rgba(0, 0, 0, .5)
+        color white
