--- a/public/styles/index.styl
+++ b/public/styles/index.styl
@@ -16,7 +16,7 @@
 @import "logo"
 @import "title"
 @import "categories-list"
-@import "about-link"
+@import "header-links"
 @import "rolled-cart"
 @import "dishes"
 @import "cart-title"
