--- a/public/views/header.jade
+++ b/public/views/header.jade
@@ -6,6 +6,9 @@
     nav.categories-list(ng-controller="CategoriesCtrl")
         a.button.button-ok.categories-list-item(data-ng-repeat="category in categories", data-ng-click="setActive(category._id)", class="{{ category._id == active && 'categories-list-item-current' }}") {{ category.name }}
 
-    a.about-link(href="#!/about") О баре
+    span.header-links
+        a(href="#!/orders", data-ng-show="user.isAuthenticated()") Заказы
+
+        a(href="#!/about") О баре
                 
     hr.header-layout-divider
