--- a/public/views/orders.jade
+++ b/public/views/orders.jade
@@ -11,7 +11,7 @@
                 .dishes-row(data-dishes)
                     .dishes-item(data-dishes-item, data-ng-repeat="position in cart.positions")
                         picture.dishes-item-picture
-                            img.dishes-item-picture-image(src="{{ position.preview }}")
+                            img.dishes-item-picture-image(data-ng-src="{{ position.preview }}")
 
                             h2.dishes-item-title {{ position.name }}
                             p.dishes-item-description {{ position.description }}
