Add dish size fields #11

--- a/public/styles/dishes.styl
+++ b/public/styles/dishes.styl
@@ -64,6 +64,9 @@
                 font-weight normal
                 color black
 
+        .dishes-item-size-unit
+            margin-left: 10px
+
         .dishes-item-form
             width 200px
             margin 0 auto
