Single line title for dish #12

--- a/public/styles/dishes.styl
+++ b/public/styles/dishes.styl
@@ -33,9 +33,19 @@
                 outline 1px solid #a8a8a8
 
         .dishes-item-title
+            width 200px
             margin 5px 20px
-            serif 18px
             font-weight normal
+            overflow hidden
+            white-space nowrap
+            serif 18px
+
+            br
+                display none
+
+            *
+                display inline
+                white-space nowrap
 
         .dishes-item-description
             margin 5px 20px 15px
