Hide categories in cart by ng- #14

--- a/public/views/header.jade
+++ b/public/views/header.jade
@@ -4,7 +4,7 @@
     h1.title Меню
 
     nav.categories-list(ng-controller="CategoriesCtrl")
-        a.button.button-ok.categories-list-item(data-ng-repeat="category in categories", data-ng-click="setActive(category._id)", class="{{category._id == active && 'categories-list-item-current'}}", style="{{location.path() == '/cart' && 'visibility:hidden;'}}") {{ category.name }}
+        a.button.button-ok.categories-list-item(data-ng-repeat="category in categories", data-ng-click="setActive(category._id)", class="{{category._id == active && 'categories-list-item-current'}}", data-ng-hide="location.path() == '/cart'") {{ category.name }}
 
     span.header-links
         a(href="#!/orders", data-ng-show="user.isAuthenticated()") Заказы
