Backend for dishes.buyable

--- a/public/styles/dishes.styl
+++ b/public/styles/dishes.styl
@@ -52,6 +52,13 @@
             sans-serif 16px
             color #7c7c7c
 
+        .dish-item-buyable
+            margin 10px 20px
+
+            .dish-item-buyable-checkbox
+                display inline-block
+                margin-right 5px
+
         .dishes-item-divider
             width 200px
             margin 5px auto
@@ -97,14 +104,12 @@
             .dishes-item-form
                 display none
 
-
             &.dishes-item-edit
                 .dishes-item-form
                     display block
 
                     .dishes-item-divider
                         margin-bottom 10px
-
 
             &.dishes-item-buyable
                 &:hover
