--- a/public/views/dishes.jade
+++ b/public/views/dishes.jade
@@ -41,6 +41,10 @@ include header
 
                 h2.dishes-item-title(data-editable='name') {{ dish.name }}
                 p.dishes-item-description(data-editable='description') {{ dish.description }}
+    
+                label.dish-item-buyable
+                    input.dish-item-buyable-checkbox(type="checkbox", ng-model="dish.buyable", data-autosave="buyable")
+                    | Есть в доставке
 
                 hr.dishes-item-divider
                 p.dishes-item-price
