Sms notification for order

--- a/public/styles/orders.styl
+++ b/public/styles/orders.styl
@@ -8,3 +8,7 @@
       padding 15px
       background #f6f6f6
       box-shadow 0 3px 10px 0 rgba(0, 0, 0, .6)
+
+      .orders-item-status
+        float right
+        margin-right 15px
