--- a/public/styles/dishes.styl
+++ b/public/styles/dishes.styl
@@ -15,6 +15,17 @@
     text-shadow none
     color black
 
+    .dishes-item-badge
+      position absolute
+      width 240px
+      margin 0
+      padding 2px
+      image "green-background"
+      text-align center
+      sans-serif 16px
+      font-style italic
+      color white
+
     .dishes-item-picture
       display block
       
