--- a/public/styles/rolled-cart.styl
+++ b/public/styles/rolled-cart.styl
@@ -9,12 +9,20 @@
     display inline-block
     margin-left 30px
     responsive padding, 3px 12px, same, 2px 10px
-    border 1px solid #980000
     border-radius 5px
-    background-color #fc402b
-    background-image linear-gradient(top, #ff8056, #f80000)
-    box-shadow inset 0 1px 0 0 #ffd4c5
     text-decoration none
     text-shadow 0 1px 0 rgba(0, 0, 0, .5)
     responsive serif 16px same 14px
     color white
+    cursor pointer
+
+    &.rolled-cart-button-cart
+      border 1px solid #980000
+      background-color #fc402b
+      background-image linear-gradient(top, #ff8056, #f80000)
+      box-shadow inset 0 1px 0 0 #ffd4c5
+
+    &.rolled-cart-button-save
+      border 1px solid #7F8F31
+      background-image linear-gradient(top, #BAC56A, #8EA635)
+      box-shadow inset 0px 2px 0px 0 #D8E091
