--- a/public/views/dishes.jade
+++ b/public/views/dishes.jade
@@ -1,12 +1,16 @@
 include header
 
 .cart-layout
-  p.rolled-cart(data-ng-show="cart.count() > 0")
+  p.rolled-cart(data-ng-show="cart.count() > 0 && !user.isAuthenticated()")
     | {{ cart.count() }} блюд на {{ cart.price() }} руб.
-    a.rolled-cart-button(href="#!/cart") Корзина
+    a.rolled-cart-button.rolled-cart-button-cart(href="#!/cart") Корзина
 
-  p.rolled-cart(data-ng-show="cart.count() == 0")
+  p.rolled-cart(data-ng-show="cart.count() == 0 && !user.isAuthenticated()")
     | Что закажете?
+
+  p.rolled-cart(data-ng-show="user.isAuthenticated()")
+    a.rolled-cart-button.rolled-cart-button-save(ng-show="dishesForSave.length > 0", ng-click="saveAll()")
+      | Сохранить новые позиции
 
   hr.cart-layout-divider
 
@@ -28,25 +32,26 @@ include header
 
         form.dishes-item-form(data-ng-show="dish.buyable")
           hr.dishes-item-divider
-          .amount(data-amount)
-            button.button.button-ok.amount-decrease(data-ng-click="decrease()") &#x25c0;
-            input.amount-input(data-ng-model="amount")
-            button.button.button-ok.amount-increase(data-ng-click="increase()") &#x25b6;
-            | &nbsp;=&nbsp;{{ amountPrice }} руб.
+          div(data-amount)
+            .amount()
+              button.button.button-ok.amount-decrease(data-ng-click="decrease()") &#x25c0;
+              input.amount-input(data-ng-model="amount")
+              button.button.button-ok.amount-increase(data-ng-click="increase()") &#x25b6;
+              | &nbsp;=&nbsp;{{ amountPrice }} руб.
             button.button.button-ok(type="submit", data-ng-click="add()") В корзину
 
 
     .dishes-row(data-dishes, data-ng-switch-when="true")
       .dishes-item.dishes-item-edit(dish, ng-class="appliedClasses()", data-ng-repeat="dish in dishes | filter:category")
+        label.dishes-item-badge
+          input.dish-item-badge-checkbox(type="checkbox", ng-checked="dish.buyable", dish-autosave="buyable")
+          | Доступно для заказа
+
         picture.dishes-item-picture
           img.dishes-item-picture-image(data-ng-src="{{ dish.preview }}", data-fileupload, data-ng-click="add()")
 
         h2.dishes-item-title(data-editable, dish-autosave="name") {{ dish.name }}
         p.dishes-item-description(data-editable, dish-autosave="description") {{ dish.description }}
-  
-        label.dish-item-buyable
-          input.dish-item-buyable-checkbox(type="checkbox", ng-checked="dish.buyable", dish-autosave="buyable")
-          | Есть в доставке
 
         hr.dishes-item-divider
         p.dishes-item-price
@@ -56,10 +61,6 @@ include header
           span(data-editable, data-numerable, dish-autosave="size") {{ dish.size }}
           select.dishes-item-size-unit(dish-autosave="sizeUnit")
             option(data-ng-repeat="sizeUnit in ['гр', 'мл', 'шт']", value="{{ sizeUnit }}", data-ng-selected="sizeUnit == dish.sizeUnit") {{ sizeUnit }}
-
-        form.dishes-item-form(data-ng-hide="dish._id")
-          hr.dishes-item-divider
-          button.button.button-ok(ng-click="create()", type="submit") Сохранить
 
       .dishes-item.dishes-item-edit(data-dishes-item, ng-click="add()")
         div(style="text-align:center;padding-top: 115px;font:18px 'PT Serif Caption', serif;color: #7c7c7c;")
