Preview for admin

--- a/public/styles/rolled-cart.styl
+++ b/public/styles/rolled-cart.styl
@@ -16,7 +16,7 @@
     color white
     cursor pointer
 
-    &.rolled-cart-button-cart
+    &.rolled-cart-button-cart, &.rolled-cart-button-preview
       border 1px solid #980000
       background-color #fc402b
       background-image linear-gradient(top, #ff8056, #f80000)
