--- a/public/views/dishes.jade
+++ b/public/views/dishes.jade
@@ -23,7 +23,7 @@ include header
 .dishes.dishes-category
   ng-switch(on="user.isAuthenticated() && !!edit")
     .dishes-row(data-dishes, data-ng-switch-when="false")
-      .dishes-item(dish, data-ng-repeat="dish in dishes | filter:category", ng-class="appliedClasses()")
+      .dishes-item(dish, data-ng-repeat="dish in dishes | filter:category | orderBy:buyableOrder", ng-class="appliedClasses()")
         p.dishes-item-badge(data-ng-show="dish.buyable") Доступно для заказа
 
         picture.dishes-item-picture
