Design for login

--- a/public/styles/index.styl
+++ b/public/styles/index.styl
@@ -7,10 +7,13 @@
 @import "form"
 @import "button"
 @import "amount"
+@import "container"
 
 // layouts
 @import "header-layout"
 @import "cart-layout"
+@import "footer-layout"
+@import "login-layout"
 
 // blocks
 @import "logo"
@@ -24,5 +27,4 @@
 @import "menu-link"
 @import "about"
 @import "orders"
-@import "login"
 @import "user"
