--- a/public/index.jade
+++ b/public/index.jade
@@ -11,6 +11,7 @@ html(lang="ru")
   body(data-ng-app="barbudosApp")
 
     .container(data-ng-view)
+    include views/footer
 
     script(src="/components/jquery/jquery.min.js")
     script(src="/components/jquery.ui/ui/jquery.ui.widget.js")
