--- a/public/styles/index.styl
+++ b/public/styles/index.styl
@@ -7,10 +7,13 @@
 @import "form"
 @import "button"
 @import "amount"
+@import "container"
 
 // layouts
 @import "header-layout"
 @import "cart-layout"
+@import "footer-layout"
+@import "login-layout"
 
 // blocks
 @import "logo"
@@ -24,4 +27,3 @@
 @import "menu-link"
 @import "about"
 @import "orders"
-@import "login"
