--- a/public/views/cart.jade
+++ b/public/views/cart.jade
@@ -38,3 +38,5 @@ include header
     input.cart-form-phone#phone(data-ng-model="order.phone")
       
     button.button.button-ok.cart-form-submit(type="submit", data-ng-click="submit(order)") Оформить заказ
+
+  .footer-divider
