--- a/public/views/dishes.jade
+++ b/public/views/dishes.jade
@@ -70,3 +70,5 @@ include header
 
       .dishes-item.dishes-item-add(data-dishes-item, ng-click="add()")
         p.dishes-item-add-text Добавить блюдо
+
+.footer-divider
