--- a/public/index.jade
+++ b/public/index.jade
@@ -6,6 +6,9 @@ html(lang="ru")
     link(rel="stylesheet", href="//fonts.googleapis.com/css?family=PT+Serif+Caption:400&subset=latin,cyrillic")
     link(rel="stylesheet", href="//fonts.googleapis.com/css?family=PT+Sans:400,400italic,700&subset=latin,cyrillic")
     link(rel="stylesheet", href="/components/normalize-css/normalize.css")
+    link(rel="stylesheet", href="/components/jquery.ui/themes/base/jquery.ui.base.css")
+    link(rel="stylesheet", href="/components/jquery.ui/themes/base/jquery.ui.theme.css")
+    link(rel="stylesheet", href="/components/jquery.ui/themes/base/jquery.ui.datepicker.css")
     link(rel="stylesheet", href="/styles/index.css")
     script(src="/components/modernizr/modernizr.js")
   body(data-ng-app="barbudosApp")
@@ -15,6 +18,9 @@ html(lang="ru")
 
     script(src="/components/jquery/jquery.min.js")
     script(src="/components/jquery.ui/ui/jquery.ui.widget.js")
+    script(src="/components/jquery.ui/ui/jquery.ui.core.js")
+    script(src="/components/jquery.ui/ui/jquery.ui.datepicker.js")
+    script(src="/components/jquery.ui/ui/i18n/jquery.ui.datepicker-ru.js")
     script(src="/components/jquery-file-upload/js/jquery.iframe-transport.js")
     script(src="/components/jquery-file-upload/js/jquery.fileupload.js")
     script(src="/components/ftscroller/lib/ftscroller.js")
