--- a/public/styles/categories-list.styl
+++ b/public/styles/categories-list.styl
@@ -4,6 +4,10 @@
   phone margin-bottom 10px
   text-align center
 
+  responsive padding, 0px 80px 0px 200px,
+            same,
+            0px
+
   .categories-list-item
     display inline-block
     width auto
@@ -14,12 +18,8 @@
     serif 16px
     font-weight normal
 
-    &:first-child
-      border-radius 6px 0 0 6px
-
     &:last-child
       border-right 1px solid #759523
-      border-radius 0 6px 6px 0
 
     &.categories-list-item-current
       border-color #759523
