--- a/public/index.jade
+++ b/public/index.jade
@@ -31,6 +31,7 @@ html(lang="ru")
     script(src="/components/angular-cookies/angular-cookies.min.js")
 
     script(src="/scripts/libraries.js")
+    script(src="/scripts/directives/login.js")
     script(src="/scripts/directives/dishes.js")
     script(src="/scripts/directives/orders.js")
 
